<resources>
    <string name="app_name">FleetManagement</string>
    <string name="action_settings">Settings</string>
    <string name="name_label">Name</string>
    <string name="mobile_label">Mobile</string>
    <string name="vehicle_number_label">Vehicle Number</string>
    <string name="vehicle_type_label">Vehicle Type</string>
    <string name="button_submit_label">Submit</string>
    <string name="empty_list_msg">No Fleet Vehicles present at the moment.</string>

</resources>
